# rust_fs_library

./: .env_example  .gitattributes  .gitignore  Cargo.toml  readme.md  rustfmt.toml
src/: main.rs
